--- a/style.css
+++ b/style.css
@@ -35,3 +35,12 @@ h1 {
     width: 50vw;
     height: 50vh;
 }
+
+.margin-different {
+    margin: 20px 10% 30px 5%
+}
+
+.margin-auto {
+    margin: 20px auto;
+    width: 50%;
+}
