--- a/style.css
+++ b/style.css
@@ -44,3 +44,85 @@ h1 {
     margin: 20px auto;
     width: 50%;
 }
+
+/* グリッドレイアウト */
+/* 基本 */
+.grid-container {
+    display: grid;
+    grid-template-columns: auto 300px;
+    grid-template-rows: 50px auto 100px;
+
+    width: 700px;
+    height: 350px;
+    margin: 0 auto;
+    text-align: center;
+    gap: 5px;
+}
+
+.grid-item {
+    background-color: #f8f8fb;
+    border: 1px solid #ddd;
+    display: flex;
+    font-weight: 700;
+    align-items: center;
+    justify-content: center;
+}
+
+.grid-item1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+
+    border-bottom: none;
+}
+
+.grid-item2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+
+    border-right: none;
+}
+
+.grid-item3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.grid-item4 {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    border-top: none;
+}
+
+/* grid-templateプロパティver */
+.grid-container-area {
+    display: grid;
+    width: 600px;
+    height: 200px;
+    grid-template: "areaA areaA areaB" 1fr "areaC areaD areaD" 1fr / 1fr 1fr 1fr;
+    gap: 5px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+
+.grid-item11 {
+    grid-area: areaA;
+
+    border-bottom: none;
+    border-right: none;
+}
+
+.grid-item22 {
+    grid-area: areaB;
+
+    border-bottom: none;
+}
+
+.grid-item33 {
+    grid-area: areaC;
+
+    border-right: none;
+}
+.grid-item44 {
+    grid-area: areaD;
+}
